@@ -1,6 +1,0 @@
-dist.ini
-MANIFEST.SKIP
-author
-nytprof.out
-nytprof
-cover_db
