@@ -1,0 +1,75 @@
+{
+   "abstract" : "Makes sure that Moo classes do not contain calls to make_immutable.",
+   "author" : [
+      "Aran Clary Deltac <bluefeet@gmail.com>"
+   ],
+   "dynamic_config" : 0,
+   "generated_by" : "Minilla/v3.1.4, CPAN::Meta::Converter version 2.150010",
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "Perl-Critic-Policy-Moo-ProhibitMakeImmutable",
+   "no_index" : {
+      "directory" : [
+         "t",
+         "xt",
+         "inc",
+         "share",
+         "eg",
+         "examples",
+         "author",
+         "builder"
+      ]
+   },
+   "prereqs" : {
+      "configure" : {
+         "requires" : {
+            "Module::Build::Tiny" : "0.035"
+         }
+      },
+      "develop" : {
+         "requires" : {
+            "Test::CPAN::Meta" : "0",
+            "Test::MinimumVersion::Fast" : "0.04",
+            "Test::PAUSE::Permissions" : "0.04",
+            "Test::Pod" : "1.41",
+            "Test::Spellunker" : "v0.2.7"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Perl::Critic" : "1.123"
+         }
+      },
+      "test" : {
+         "requires" : {
+            "Test::Simple" : "0.96",
+            "Try::Tiny" : "0.19"
+         }
+      }
+   },
+   "release_status" : "unstable",
+   "resources" : {
+      "bugtracker" : {
+         "web" : "https://github.com/bluefeet/Perl-Critic-Policy-Moo-ProhibitMakeImmutable/issues"
+      },
+      "homepage" : "https://github.com/bluefeet/Perl-Critic-Policy-Moo-ProhibitMakeImmutable",
+      "repository" : {
+         "type" : "git",
+         "url" : "git://github.com/bluefeet/Perl-Critic-Policy-Moo-ProhibitMakeImmutable.git",
+         "web" : "https://github.com/bluefeet/Perl-Critic-Policy-Moo-ProhibitMakeImmutable"
+      }
+   },
+   "version" : "0.03",
+   "x_contributors" : [
+      "Aran Deltac <aran@ziprecruiter.com>",
+      "Graham TerMarsch <graham@howlingfrog.com>",
+      "Kivanc Yazan <kyzn@users.noreply.github.com>"
+   ],
+   "x_serialization_backend" : "JSON::PP version 2.27300",
+   "x_static_install" : 1
+}
