@@ -1,13 +1,11 @@
-=pod
-
-=head1 NAME
+# NAME
 
 Perl::Critic::Policy::Moo::ProhibitMakeImmutable - Makes sure that Moo classes
-do not contain calls to make_immutable.
+do not contain calls to make\_immutable.
 
-=head1 DESCRIPTION
+# DESCRIPTION
 
-When migrating from L<Moose> to L<Moo> it can be a common issue to accidentally
+When migrating from [Moose](https://metacpan.org/pod/Moose) to [Moo](https://metacpan.org/pod/Moo) it can be a common issue to accidentally
 leave in:
 
     __PACKAGE__->meta->make_immutable;
@@ -16,34 +14,23 @@ This policy complains if this exists in a Moo class as it triggers Moose to be
 loaded and metaclass created, which defeats some of the benefits you get using
 Moo instead of Moose.
 
-=head1 AUTHOR
+# AUTHOR
 
-Aran Clary Deltac <bluefeetE<64>gmail.com>
+Aran Clary Deltac <bluefeet@gmail.com>
 
-=head2 CONTRIBUTORS
+## CONTRIBUTORS
 
-=over
+- Kivanc Yazan <kyzn@users.noreply.github.com>
+- Graham TerMarsch <graham@howlingfrog.com>
 
-=item *
+# ACKNOWLEDGEMENTS
 
-Kivanc Yazan <kyznE<64>users.noreply.github.com>
-
-=item *
-
-Graham TerMarsch <grahamE<64>howlingfrog.com>
-
-=back
-
-=head1 ACKNOWLEDGEMENTS
-
-Thanks to L<ZipRecruiter|https://www.ziprecruiter.com/>
+Thanks to [ZipRecruiter](https://www.ziprecruiter.com/)
 for encouraging their employees to contribute back to the open
 source ecosystem.  Without their dedication to quality software
 development this distribution would not exist.
 
-=head1 LICENSE
+# LICENSE
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
-
-=cut
