@@ -1,6 +1,0 @@
-name    = Perl-Critic-Policy-Moo-ProhibitMakeImmutable
-author  = Aran Deltac <bluefeet@gmail.com>
-license = Perl_5
-copyright_holder = Aran Deltac
-
-[@Author::BLUEFEET]
