@@ -1,0 +1,1 @@
+name = "Perl-Critic-Policy-Moo-ProhibitMakeImmutable"
